--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,7 +2,12 @@
 
   .navbar .menu{
     display: none;
-    <i class="fa fa-bars"></i>
+    
+  }
+  .iconformobile{
+    display: contents;
+    font-size: 3em;
+    color: gray;
   }
   .search{
     width: 90%;
@@ -25,6 +30,7 @@
   }
   .search .searchbox button{
     font-size: 1.1em;
+    padding-top: 8px;
   }
 
   .populartours{
