CHOOSE YOUR DESTINATION section addedd

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -45,6 +45,12 @@
     width: 80%;
     padding:20px; 
   }
+  
+  .imagecontainer .image{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    
 }
     
 
