--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,6 +28,11 @@
   .search .searchbox *{
     height:40px;
   }
+  .search h1{
+    
+    width: 100%;
+    font-size: 2em;
+  }
   .search .searchbox button{
     font-size: 1.1em;
     padding-top: 8px;
@@ -45,12 +50,28 @@
     width: 80%;
     padding:20px; 
   }
-  
   .imagecontainer .image{
     width: 100%;
-    height: auto;
-    object-fit: cover;
+    height: 300px
+  }
+  
+  .imagecontainer .image img{
+    max-width: 100%;
+    height: 100%;
+    object-fit:cover;
     
 }
-    
+
+.whychooseus h1{
+  width: 50%;
+  font-size: 1.2rem;
+}
+.whychooseus p{
+  width: 90%;
+}
+
+.ourservices{
+  display: flex;
+  flex-direction: column;
+}
 
