--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@
 .search{
     
     margin: 10px 20px;
-    background-image: url(../Images/Group\ 13.png);
+    background-image: url(../images/group13.png);
     width: 90%;
     height: 400px;
     display: flex;
